# main.go
@@ -32,6 +32,7 @@ func main() {
 
 	router.GET("/candidate", services.CandidateList)
 	router.PUT("/candidate", services.CandidateCreate)
+	router.DELETE("/candidate", services.CandidatesDelete)
 	router.GET("/candidate/:id", services.CandidateItem)
 	router.POST("/candidate/:id", services.CandidateUpdate)
 	router.DELETE("/candidate/:id", services.CandidateDelete)
